fix : bug fix ("side drawer not showing on click menu)

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -85,7 +85,7 @@ font-family: 'Press Start 2P';
   .hamburger__menu > div {
     width: 100%;
     height: 3px;
-    background: #f4f4f4;
+    background: aliceblue;
   }
   
   @media (max-width: 960px) {
