--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@ box-sizing:border-box;
 
 body{
     font-family: 'Ubuntu Mono', monospace;
-    background: #f4f4f4; ;
+    background:aliceblue ;
 }
 
 img{
